styles-v2.css
/* Global settings */
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

a, address, article, aside, b, button, blockquote, body,
caption, code, dd, div, dl, dt, em, fieldset,
footer, form, h1, h2, h3, h4, h5, h6,
header, hr, html, i, iframe, img, ins, input, textarea,
label, legend, li, nav, ol, p, pre, section, select,
small, span, strong, sub, sup, table, tbody, td,
tfoot, th, thead, time, tr, tt, ul {
  border: none;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: 0;
}

li {
  list-style: none;
}

html,
body {
  height: 100%;
  min-height: 100%;
}

body {
  font-family: arial, sans-serif;
  font-size: 100%;
  line-height: 1.4;
  -webkit-font-smoothing: antialiased;
}

a {
  border: 0;
  color: #097ad2;
  text-decoration: none;
}

b {
  color: #333;
  font-weight: bold;
}

.kmt-page-header,
.kmt-page-hero,
.kmt-section,
h2 {
  position: relative;
  z-index: 998;
}

h1 {
  font-size: 4em;
  padding-bottom: .5em;
}

h2 {
  font-size: 3em;
  line-height: 2;
  margin-bottom: .4em;
}

h3 {
  font-weight: bold;
  font-size: 1.375em;
  line-height: 1.2;
  margin-bottom: .7em;
}

h4 {
  color: #333;
  font-weight: bold;
  padding-bottom: .4em;
  text-transform: uppercase;
}

.kmt-page-content a[target='_blank'] {
  border-bottom: 1px dotted;
}

.kmt-page-content .gray-out a {
  border: 0;
}

[class^='kmt-page-'] {
  padding: 0 1em;
}

.kmt-section {
  padding: 2em 10%;
}

.kmt-page-hero .kmt-section {
  padding-top: 0;
}

.kmt-homepage .kmt-section,
h2,
h2 + p {
  text-align: center;
}

h2 + p {
  font-size: 1.2em;
  margin-bottom: 2.8em;
}
/* / Global settings */

/* Colors and decor */
body {
  background-color: #fff;
  color: #555;
}

h2,
h3 {
  color: #000;
}

.kmt-page-header,
.kmt-page-hero,
.kmt-page-footer {
  background-color: #222;
}

.kmt-navigation a,
.kmt-page-hero,
.kmt-page-footer {
  color: #fff;
}

.kmt-navigation a:hover,
.kmt-page-footer .kmt-navigation a,
.kmt-current-page {
  background-color: rgba(255,255,255,.1);
  border-radius: 2px;
}

h2:after {
  background-color: #097ad2;
  bottom: 0;
  content: '';
  height: 4px;
  left: 50%;
  margin-left: -1em;
  position: absolute;
  width: 2em;
  z-index: 100;
}

.kmt-homepage h2:after {
  background-color: #f58f00;
}

.kmt-demo h2:after {
  display: none;
}

.info {
  background-color: InfoBackground;
  margin-left: 2em;
  margin-right: 2em;
  padding: 1em;
  position: relative;
}

.info:before {
  bottom: 100%;
  border: 1em solid transparent;
  border-bottom-color: InfoBackground;
  content: ' ';
  height: 0;
  left: 50%;
  margin-left: -1em;
  width: 0;
  position: absolute;
  width: 0;
}

.gray-out h2 {
  color: #888;
}

.gray-out h2:after {
  background-color: #aaa;
}

.gray-out.button {
  background-color: #666;
}

.gray-out img {
  filter: grayscale(1);
  opacity: .7;
}

.gray-out img:hover {
  filter: grayscale(0);
  opacity: 1;
}

.notes p {
  font-size: 1.4em;
  padding-bottom: 2em;
}

.extra p {
  clear: both;
  padding: 3em 0;
  text-align: center;
}

.extra em {
  display: block;
  font-size: 1.4em;
  padding-bottom: 1em;
}

/*.kmt-page-header,*/
.kmt-homepage .kmt-page-content .kmt-section:first-child,
.extra p,
.kmt-parameter table {
  background-color: rgba(200,200,200,.2);
}

.kmt-homepage .kmt-page-header {
  background-color: transparent;
}

button,
.button,
.kmt-navigation ul li a {
  display: inline-block;
  padding: 1em 1em .8em 1em;
  text-transform: uppercase;
}

button,
.button {
  background-color: #097ad2;
  border-radius: 2px;
  color: #fff;
}

.kmt-navigation ul li:last-child a {
  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 32 32"><path fill="white" d="M16,0.4C7.2,0.4,0.1,7.6,0.1,16.3c0,7,4.6,13,10.9,15.1c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.4,1-5.4-2.1-5.4-2.1C6,24,4.9,23.5,4.9,23.5c-1.4-1,0.1-1,0.1-1c1.6,0.1,2.4,1.6,2.4,1.6c1.4,2.4,3.7,1.7,4.6,1.3c0.1-1,0.6-1.7,1-2.1c-3.5-0.4-7.2-1.8-7.2-7.8c0-1.7,0.6-3.2,1.6-4.3c-0.2-0.4-0.7-2,0.2-4.2C7.7,7,9,6.6,12,8.7c1.3-0.4,2.6-0.5,4-0.5c1.3,0,2.7,0.2,4,0.5C23,6.6,24.4,7,24.4,7c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.4-7.3,7.8c0.6,0.5,1.1,1.5,1.1,2.9c0,2.1,0,3.8,0,4.4c0,0.4,0.3,0.9,1.1,0.8c6.3-2.1,10.9-8.1,10.9-15.1C31.9,7.6,24.8,0.4,16,0.4z"/></svg>');
  background-position: 1em center;
  background-repeat: no-repeat;
  padding-left: 2.8em;
}
/* / Colors and decor */

/* Header and main navigation */
.kmt-page-header {
  display: table;
  height: 5em;
  padding-top: 1em;
  position: relative;
  width: 100%;
  z-index: 999;
}

.kmt-page-header li,
.kmt-page-content li {
  display: inline-block;
}

.kmt-logo {
  float: left;
  font-size: 1.6em;
}

.kmt-logo *,
.dtm-logo * {
  color: #fff;
  display: inline-block;
  font-style: normal;
  vertical-align: middle;
}

.kmt-logo span {
  margin-left: .3em;
}

.kmt-logo b {
  margin-right: .2em;
}

.kmt-navigation {
  float: right;
}

.kmt-page-header .kmt-current-page {
  color: #097ad2;
}
/* / Header and main navigation */

/* Komito hero section */
.kmt-page-hero {
  background: url(images/komito-hero-background.png) no-repeat top right/cover fixed;
  min-height: 25.75em;
  margin-top: -5.3125em;
  overflow: hidden;
  padding-top: 8em;
  z-index: 1;
}

.kmt-page-hero:after {
  background-color: rgba(0,0,0,.5);
  content: '';
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.kmt-page-hero p {
  font-size: 1.625em;
  line-height: 1.5;
}
/* / Komito hero section */

/* Komito content section */
.kmt-page-content {
  padding: 0;
}

.kmt-page-content ul {
  vertical-align: top;
}

.kmt-page-content li {
  padding: 1.6em;
}

li i {
  font-style: normal;
  line-height: 1.4;
}

.kmt-metrics li {
  background-position: top center;
  background-repeat: no-repeat;
  background-size: 3.5em;
  min-height: 13em;
  overflow: hidden;
  padding: 4em 2em 3em;
  width: 33%;
}
/* ... */

